vlib/v/checker/tests/map_unknown_value.vv
struct App {
    my_map map[string]DoesNotExist
}
